[tool.poetry]
name = "githubkit-test"
version = "0.1.0"
description = "Private test env for githubkit"
authors = ["yanyongyu <yyy@yyydl.top>"]
license = "MIT"
packages = [{ include = "githubkit-test.py" }]

[tool.poetry.dependencies]
python = "^3.8"
anyio = "*"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
coverage-conditional-plugin = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
