[tool.poetry]
name = "githubkit-test"
version = "0.1.0"
description = "Private test env for githubkit"
authors = ["yanyongyu <yyy@yyydl.top>"]
license = "MIT"
packages = [{ include = "githubkit-test.py" }]

[tool.poetry.dependencies]
python = "^3.9"
anyio = "*"
pytest = "^8.1.0"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.5.0"
redis = ">=5.2.0, <7.0.0"
coverage-conditional-plugin = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
